Ais.IO/EncoderIO.h

#pragma once
#include <vector>
#include <stdexcept>
#include <cstdint>
#include <cstring>
#include <stdint.h>

/* Dll Export Define */
#ifndef BINARYIO_EXPORTS
#ifdef _WIN32
#define ENCODERIO_API __declspec(dllimport)
#else
#define ENCODERIO_API
#endif
#endif

#ifndef EXTERN
#define EXT extern "C"
#endif

static const char Base16_Chars[] =
"0123456789ABCDEF";

static const char Base32_Chars[] =
"ABCDEFGHIJKLMNOPQRSTUVWXYZ234567";

static const char Base64_Chars[] =
"ABCDEFGHIJKLMNOPQRSTUVWXYZ"
"abcdefghijklmnopqrstuvwxyz"
"0123456789+/";

static const char Base85_Chars[] =
"0123456789"
"ABCDEFGHIJKLMNOPQRSTUVWXYZ"
"abcdefghijklmnopqrstuvwxyz"
"!#$%&()*+-;<=>?@^_`{|}~";

// Base16 秆絏
static const int Base16_Lookup[256] = {
    -1, -1, -1, -1, -1, -1, -1, -1, // 0-7 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 8-15 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 16-23 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 24-31 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 32-39 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 40-47 獶猭才
     0,  1,  2,  3,  4,  5,  6,  7, // 48-55: '0'-'7'
     8,  9, -1, -1, -1, -1, -1, -1, // 56-63: '8'-'9'
    -1, 10, 11, 12, 13, 14, 15, -1, // 64-71: 'A'-'F'
    -1, -1, -1, -1, -1, -1, -1, -1, // 72-79 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 80-87 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 88-95 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 96-103 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 104-111 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 112-119 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 120-127 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 128-135 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 136-143 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 144-151 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 152-159 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 160-167 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 168-175 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 176-183 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 184-191 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 192-199 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 200-207 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 208-215 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 216-223 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 224-231 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 232-239 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 240-247 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 248-255 獶猭才
};

// Base32 秆絏
static const int Base32_Lookup[256] = {
    -1, -1, -1, -1, -1, -1, -1, -1, // 0-7 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 8-15 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 16-23 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 24-31 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 32-39 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 40-47 獶猭才
    -1, -1, 26, 27, 28, 29, 30, 31, // 48-55: '2'-'7'
    -1, -1, -1, -1, -1, -1, -1, -1, // 56-63 獶猭才
    -1,  0,  1,  2,  3,  4,  5,  6, // 64-71: 'A'-'H'
     7,  8,  9, 10, 11, 12, 13, 14, // 72-79: 'I'-'P'
    15, 16, 17, 18, 19, 20, 21, 22, // 80-87: 'Q'-'X'
    23, 24, 25, -1, -1, -1, -1, -1, // 88-95: 'Y'-'Z'
    -1, -1, -1, -1, -1, -1, -1, -1, // 96-103 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 104-111 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 112-119 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 120-127 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 128-135 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 136-143 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 144-151 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 152-159 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 160-167 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 168-175 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 176-183 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 184-191 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 192-199 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 200-207 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 208-215 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 216-223 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 224-231 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 232-239 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 240-247 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 248-255 獶猭才
};

// Base64 秆絏
static const int Base64_Lookup[256] = {
    -1, -1, -1, -1, -1, -1, -1, -1, // 0-7 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 8-15 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 16-23 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 24-31 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 32-39 獶猭才
    -1, -1, -1, 62, -1, -1, -1, 63, // 40-47: '+','/'
    52, 53, 54, 55, 56, 57, 58, 59, // 48-55: '0'-'7'
    60, 61, -1, -1, -1, -1, -1, -1, // 56-63: '8'-'9'
    -1,  0,  1,  2,  3,  4,  5,  6, // 64-71: 'A'-'H'
     7,  8,  9, 10, 11, 12, 13, 14, // 72-79: 'I'-'P'
    15, 16, 17, 18, 19, 20, 21, 22, // 80-87: 'Q'-'X'
    23, 24, 25, -1, -1, -1, -1, -1, // 88-95: 'Y'-'Z'
    -1, 26, 27, 28, 29, 30, 31, 32, // 96-103: 'a'-'g'
    33, 34, 35, 36, 37, 38, 39, 40, // 104-111: 'h'-'o'
    41, 42, 43, 44, 45, 46, 47, 48, // 112-119: 'p'-'w'
    49, 50, 51, -1, -1, -1, -1, -1, // 120-127: 'x'-'z'
    -1, -1, -1, -1, -1, -1, -1, -1, // 128-135 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 136-143 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 144-151 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 152-159 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 160-167 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 168-175 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 176-183 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 184-191 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 192-199 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 200-207 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 208-215 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 216-223 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 224-231 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 232-239 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 240-247 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 248-255 獶猭才
};

// Base85 秆絏
static const int Base85_Lookup[256] = {
    -1, -1, -1, -1, -1, -1, -1, -1, // 0-7: 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 8-15: 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 16-23: 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 24-31: 獶猭才
    -1,  0, -1,  1,  2,  3,  4, -1, // 32-39: '!'-'&'
     5,  6,  7,  8, -1,  9, -1, -1, // 40-47: '('-'-'
    10, 11, 12, 13, 14, 15, 16, 17, // 48-55: '0'-'7'
    18, 19, -1, 20, 21, 22, 23, 24, // 56-63: '8'-'?'
    25, 26, 27, 28, 29, 30, 31, 32, // 64-71: '@'-'G'
    33, 34, 35, 36, 37, 38, 39, 40, // 72-79: 'H'-'O'
    41, 42, 43, 44, 45, 46, 47, 48, // 80-87: 'P'-'W'
    49, 50, 51, -1, -1, -1, 52, 53, // 88-95: 'X'-'_'
    54, 55, 56, 57, 58, 59, 60, 61, // 96-103: '`'-'g'
    62, 63, 64, 65, 66, 67, 68, 69, // 104-111: 'h'-'o'
    70, 71, 72, 73, 74, 75, 76, 77, // 112-119: 'p'-'t'
    78, 79, 80, 81, 82, 83, 84, -1, // 120-127: 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 128-135 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 136-143 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 144-151 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 152-159 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 160-167 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 168-175 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 176-183 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 184-191 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 192-199 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 200-207 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 208-215 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 216-223 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 224-231 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 232-239 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 240-247 獶猭才
    -1, -1, -1, -1, -1, -1, -1, -1, // 248-255 獶猭才
};

/* Base16 岿粇絏竡

-1: 块┪块皐
-2: 块絯侥跋ぃì
-3: 块ぃ猭秆絏ゲ斗琌案计
-4: 獶猭才瞷秆絏筁祘いぃ琌 Base16 Τ才*/
EXT ENCODERIO_API int Base16Encode(const char* input, char* output, int outputSize);
EXT ENCODERIO_API int Base16Decode(const char* input, char* output, int outputSize);

/* Base32 岿粇絏竡

-1: 块┪块皐
-2: 块絯侥跋ぃì
-3: 块计沮ぃ猭Base32 秆絏璶―琌 8 计
-4: 獶猭才瞷秆絏筁祘いぃ琌 Base32 Τ才*/
EXT ENCODERIO_API int Base32Encode(const char* input, char* output, int outputSize);
EXT ENCODERIO_API int Base32Decode(const char* input, char* output, int outputSize);

/* Base64 岿粇絏竡

-1: 块┪块皐
-2: 块絯侥跋ぃì礚猭纗挡狦
-3: 块计沮ぃ猭Base64 秆絏璶―琌 4 计
-4: 獶猭才瞷秆絏筁祘いぃ琌 Base64 Τ才
*/
EXT ENCODERIO_API int Base64Encode(const char* input, char* output, int outputSize);
EXT ENCODERIO_API int Base64Decode(const char* input, char* output, int outputSize);

/* Base64 岿粇絏竡

-1: 块┪块皐
-2: 块絯侥跋ぃì礚猭纗挡狦
-3: 块计沮ぃ猭Base85 秆絏璶―琌 5 计
-4: 獶猭才瞷秆絏筁祘いぃ琌 Base85 Τ才
*/
EXT ENCODERIO_API int Base85Encode(const char* input, char* output, int outputSize);
EXT ENCODERIO_API int Base85Decode(const char* input, char* output, int outputSize);